// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Prototypes/GridItem Default 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <GridItem>
    <div
      className="grid-item"
    >
      <Field
        label="Alpha"
        name="label1"
        placeholder="Enter text"
        register={[Function]}
      >
        <div
          className="field"
        >
          <label
            className="label"
            htmlFor="label1"
          >
            Alpha
          </label>
          <div
            className="control"
          >
            <input
              aria-describedby="label1-error"
              aria-invalid={false}
              className="input"
              id="label1"
              name="label1"
              placeholder="Enter text"
              type="text"
            />
          </div>
        </div>
      </Field>
    </div>
  </GridItem>
</div>
`;

exports[`Storyshots Prototypes/GridItem Two Columns 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <GridItem
    className="md:col-span-2"
  >
    <div
      className="grid-item md:col-span-2"
    >
      <Field
        label="Alpha"
        name="label1"
        placeholder="Enter text"
        register={[Function]}
      >
        <div
          className="field"
        >
          <label
            className="label"
            htmlFor="label1"
          >
            Alpha
          </label>
          <div
            className="control"
          >
            <input
              aria-describedby="label1-error"
              aria-invalid={false}
              className="input"
              id="label1"
              name="label1"
              placeholder="Enter text"
              type="text"
            />
          </div>
        </div>
      </Field>
    </div>
  </GridItem>
</div>
`;
